[package]
name = "neutron-icq"
version = "0.1.0"
authors = ["Isak Rickyanto <isak@favoritemedium.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "=1.4.0"
cw2 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
neutron-sdk = "0.7.0"
base64 = "0.13.0"
cosmos-sdk-proto = { version = "0.14.0", default-features = false }
cw-storage-plus = "1.0.1"
prost = "0.11"
serde-json-wasm = "0.4.1"
thiserror = { version = "1.0.49" }
cosmwasm-schema = "1.2.2"

[dev-dependencies]
cosmwasm-schema = { version = "1.2.2", default-features = false }

